--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -1,10 +1,14 @@
 .item__wrapper {
     padding: 20px;
-    border: 1px solid red;
+    border: 1px solid #d3d3d3;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 300px;
 }
 .modal__wrapper {
     background: whitesmoke;
-    padding: 40px 0;
+    padding: 40px 20px;
     font-size: 20px;
     position: absolute;
     top: 50%;
@@ -15,4 +19,24 @@
     gap: 20px;
     flex-direction: column;
     text-align: center;
+}
+.task__item__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.item__title {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.item__description {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+@media screen and (max-width:768px) {
+    .modal__wrapper {
+        width: 300px;
+    }
 }
